--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,11 @@
             android:text="多线程并发"
             android:textAllCaps="false" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="openCoroutine"
+            android:text="协程"
+            android:textAllCaps="false" />
     </LinearLayout>
 </layout>
