--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,5 +39,12 @@
             android:onClick="openCoroutine"
             android:text="协程"
             android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="openCompose"
+            android:text="Compose"
+            android:textAllCaps="false" />
     </LinearLayout>
 </layout>
