--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/ll_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -45,6 +46,13 @@
             android:layout_height="wrap_content"
             android:onClick="openCompose"
             android:text="Compose"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="requestPermission"
+            android:text="请求存储权限"
             android:textAllCaps="false" />
     </LinearLayout>
 </layout>
