--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,4 +63,11 @@
         android:onClick="motionTest"
         android:text="卡顿分析"
         android:textAllCaps="false" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="mvi"
+        android:text="MVI"
+        android:textAllCaps="false" />
 </LinearLayout>
