--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
         <!--如果有底部虚拟导航栏，则将底部虚拟导航栏设置为透明，并将界面内容布局下边界下沉至虚拟导航栏底部-->
 <!--        <item name="android:windowTranslucentNavigation">true</item>-->
         <!--给window窗口设置背景图-->
-        <item name="android:windowBackground">@drawable/bg_splash</item>
+<!--        <item name="android:windowBackground">@drawable/bg_splash</item>-->
     </style>
 
     <style name="Theme.Study.NoActionBar">
